# Static-Code-Analyzer-for-a-C-like-Language-using-CFG-Based-Data-Flow-Analysis

./: CMakeLists.txt  DETAILED_WORKFLOW.md  README.md  cfg.dot  main.cpp  output  test.c
Compiler Design/: cfg.dot  main.cpp
Compiler Design/ast/: ASTNode.h
Compiler Design/cfg/: CFG.cpp  CFG.h
Compiler Design/dataflow/: DataFlow.cpp  DataFlow.h
Compiler Design/lexer/: Lexer.cpp  Lexer.h
Compiler Design/parser/: Parser.cpp  Parser.h
Compiler Design/utils/: Token.h
ast/: ASTNode.h
cfg/: CFG.cpp  CFG.h
cfg/ast/: ASTNode.h
explaination/: cfg_explanation.md  context_free_grammar.md  context_free_grammar_code.md  lexer_explanation.md  parser_explanation.md  symboltable_explanation.md
grammar/: MiniC.g4
guide/: BEGINNER_GUIDE.md  CLEANUP_SUMMARY.md  CONSOLIDATED_GUIDE.md  PROJECT_REPORT.md  REQUIREMENT_SPECIFICATION.md
lexer/: Lexer.cpp  Lexer.h
parser/: Parser.cpp  Parser.h
src/: CFG.h  DataFlow.h  Parser.h  Semantic.h  cfg.dot  main.cpp
src/ast/: ASTBuilder.cpp  ASTBuilder.h  ASTNode.h  Expr.h  Stmt.h
src/cfg/: BasicBlock.h  CFG.h  CFGBuilder.cpp  CFGBuilder.h
src/dataflow/: DataFlowAnalysis.h  WorklistSolver.cpp  WorklistSolver.h
src/dataflow/analyses/: DeadCode.cpp  UninitializedVars.cpp  UnreachableCode.cpp  (+1 more)
src/parser/: Lexer.cpp  Lexer.h  ParserDriver.cpp  ParserDriver.h  Token.h
src/semantic/: Scope.cpp  Scope.h  SemanticAnalyzer.cpp  SemanticAnalyzer.h  SymbolTable.cpp  SymbolTable.h
src/utils/: Helpers.h  Logger.h
src/viz/: CFGPrinter.cpp  CFGPrinter.h
symbolTable/: SymbolTable.h
tests/samples/: test.c
utils/: Token.h
